@@ -103,7 +103,7 @@ class Logo_Carousel extends Powerpack_Widget {
 	 * @return array Widget style dependencies.
 	 */
 	public function get_style_depends(): array {
-		return [ 'pp-swiper', 'widget-pp-logo-carousel' ];
+		return [ 'e-swiper', 'pp-swiper', 'widget-pp-logo-carousel' ];
 	}
 
 	public function has_widget_inner_wrapper(): bool {
